frontend/css/styles.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
    padding: 0;
}

html { scrollbar-gutter: stable; }

body {
    font-family: 'Geist', sans-serif;
    background-color: var(--strong);
    color: var(--contrast);

    min-height: 100vh;
    min-height: 100dvh;

    display: flex;
    flex-direction: column;

    scroll-behavior: smooth;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
}

/* ==================== BASIC CALLING ==================== */

:root {
    --strong: #050505;
    --contrast: #FAFAFA;
    --muted: #969696;

    --sidepadding: clamp(1rem, 0.6429rem + 1.7857vw, 1.5rem);
    --lockedvw: 1800px;
}

@font-face {
    font-family: 'Geist';
    src: url('../assets/fonts/Geist[wght].woff2') format('woff2');
    font-weight: 100 900;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Geist Mono';
    src: url('../assets/fonts/GeistMono[wght].woff2') format('woff2');
    font-weight: 100 900;
    font-style: normal;
    font-display: swap;
}

/* ==================== BASIC STYLING ==================== */

a {
    font-family: inherit;
    font-weight: 450;
    text-decoration: none;
    color: inherit;

    &:active { scale: .99; }
}

a:focus-visible,
button:focus-visible,
input:focus-visible {
    outline: 2px solid var(--contrast);
    outline-offset: 2px;
}

input { all: unset; }
button { all: unset; cursor: pointer; text-align: center; &:active { scale: .99; } }

svg { fill: var(--contrast); margin: 0; padding: 0; box-sizing: border-box; height: fit-content; width: fit-content; }

hr {
    border: none;
    border-top: 1px solid hsl(from var(--muted) h s l / 0.25);
}

main {
    width: 100%;
}

section,
nav {
    width: 100%;
    max-width: var(--lockedvw);
    padding: 0 var(--sidepadding);
    margin: 0 auto;
}

.unselectable {
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.hidden { display: none !important; }

/* ==================== TEXT STYLING ==================== */

.monospace { font-family: 'Geist Mono', monospace; font-size: 14px; }

.green { color: #00e676; }
.yellow-orange { color: #ff9100; }
.red { color: #ff1744; }

/* ==================== BUTTON STYLING ==================== */

.bracket-buttons {
    font-family: 'Geist Mono', monospace;
    font-size: 14px;

    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;

    & a, button {
        padding: 1px;
        width: fit-content;

        transition: opacity .3s ease;
        &:hover { text-decoration: underline; opacity: .84; }

        &:focus-visible {
            outline: none;
            background-color: var(--contrast);
            color: var(--strong) !important;
        }
    }
}

/* ==================== MISC STYLING ==================== */

.progress {
    width: 100%;
    height: 5px;
    background-color: hsl(from var(--muted) h s l / .24);
    border-radius: 50vw;
    overflow: hidden;
}

.bar {
    height: 100%;
    background-color: var(--contrast);
    border-radius: 50vw;
    transition: width 0.3s ease;
}

.back-nav {
    display: flex;
    align-items: center;
    gap: 12px;

    font-size: 15px;
    color: var(--muted);

    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

